# AutoNeuro

./: .gitignore  HUMAN_INSTRUCTION.txt  MEGA_PROMPT.txt  PROJECT_CONTEXT.md  README.md  SAMPLE.json  TABLES.txt  database.db  db.py  evaluate.py  orchestrator.py  prepare.py  program.md  pyproject.toml  results.tsv  state.json  train.py  wrapper.sh
agents/: coding_agent.md  contact_agent.md  contact_agent.py  research_agent.md
dashboard/: flags.html  index.html  server.py
experiments/experiment1_iris/: prepare.py  program.md  train.py
experiments/experiment2_diabetes/: prepare.py  train.py
experiments/experiment3_ecg/: prepare.py  program.md  train.py
