[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-auto-research"
version = "0.0.0"
description = "Generalized AutoResearch-style multi-agent ML pipeline (skeleton)."
readme = "program.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "flask-cors",
    "numpy",
    "openai>=1.0.0",
    "python-dotenv",
    "scikit-learn",
]

[tool.setuptools]
packages = []
